--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -41,9 +41,11 @@ Automatic upload on video file select, without a Video Upload button:
     </div>
 
     <div style="display: {{ authenticated ? 'block' : 'none' }}">
-      <input type="file" id="file" class="button" accept="video/*" on-change="{{handleFilePick}}">
-      <button on-click="{{uploadFile}}" style="display: {{ autoUpload ? 'none' : 'block' }}">Upload Video</button>
-      <p id="disclaimer">By uploading a video, you certify that you own all rights to the content or that you are authorized by the owner to make the content publicly available on YouTube, and that it otherwise complies with the YouTube Terms of Service located at <a href="http://www.youtube.com/t/terms">http://www.youtube.com/t/terms</a></p>
+      <input type="file" id="file" class="button" accept="video/*" on-change="{{handleFileChanged}}">
+
+      <button on-click="{{handleUploadClicked}}" style="display: {{ autoUpload ? 'none' : 'block' }}" disabled?="{{ !selectedFile }}">Upload Video</button>
+
+      <p id="disclaimer">By uploading a video, you certify that you own all rights to the content or that you are authorized by the owner to make the content publicly available on YouTube, and that it otherwise complies with the YouTube Terms of Service located at <a href="http://www.youtube.com/t/terms" target="_blank">http://www.youtube.com/t/terms</a></p>
     </div>
   </template>
 
@@ -234,6 +236,7 @@ Automatic upload on video file select, without a Video Upload button:
       channelThumbnailUrl: '',
       videoId: '',
       uploadStartTime: 0,
+      selectedFile: null,
       STATUS_POLLING_ITERVAL_MILLIS: 60 * 1000, // One minute.
 
       ready: function() {
@@ -266,73 +269,82 @@ Automatic upload on video file select, without a Video Upload button:
         }.bind(this));
       },
 
-      uploadFile: function() {
-        if (this.$.file.files.length > 0) {
-          // TODO: Disable "Upload Video" button.
-          var f = this.$.file.files[0];
+      uploadFile: function(f) {
+        var metadata = {
+          snippet: {
+            title: this.videoTitle,
+            description: this.description,
+            tags: this.tags,
+            categoryId: this.categoryId
+          },
+          status: {
+            privacyStatus: this.privacyStatus
+          }
+        };
 
-          var metadata = {
-            snippet: {
-              title: this.videoTitle,
-              description: this.description,
-              tags: this.tags,
-              categoryId: this.categoryId
-            },
-            status: {
-              privacyStatus: this.privacyStatus
+        var uploader = new MediaUploader({
+          baseUrl: 'https://www.googleapis.com/upload/youtube/v3/videos',
+          file: f,
+          token: this.accessToken,
+          metadata: metadata,
+          params: {
+            part: Object.keys(metadata).join(',')
+          },
+          onError: function(data) {
+            var message = data;
+
+            // Assuming the error is raised by the YouTube API, data will be
+            // a JSON string with error.message set. I am not 100% sure that's the
+            // only time onError will be raised, though.
+            try {
+              var errorResponse = JSON.parse(data);
+              message = errorResponse.error.message;
+            } finally {
+              this.fire('youtube-upload-failed', message);
             }
-          };
+          }.bind(this),
+          onProgress: function(data) {
+            var currentTime = (new Date).getTime();
+            var bytesUploaded = data.loaded;
+            var totalBytes = data.total;
 
-          var uploader = new MediaUploader({
-            baseUrl: 'https://www.googleapis.com/upload/youtube/v3/videos',
-            file: f,
-            token: this.accessToken,
-            metadata: metadata,
-            params: {
-              part: Object.keys(metadata).join(',')
-            },
-            onError: function(data) {
-              console.log('onError', data);
-              this.fire('youtube-upload-failed', data);
-            }.bind(this),
-            onProgress: function(data) {
-              var currentTime = (new Date).getTime();
-              var bytesUploaded = data.loaded;
-              var totalBytes = data.total;
+            // The times are in millis, so we need to divide by 1000 to get seconds.
+            var bytesPerSecond = bytesUploaded / ((currentTime - this.uploadStartTime) / 1000);
+            var estimatedSecondsRemaining = (totalBytes - bytesUploaded) / bytesPerSecond;
+            var fractionComplete = bytesUploaded / totalBytes;
 
-              // The times are in millis, so we need to divide by 1000 to get seconds.
-              var bytesPerSecond = bytesUploaded / ((currentTime - this.uploadStartTime) / 1000);
-              var estimatedSecondsRemaining = (totalBytes - bytesUploaded) / bytesPerSecond;
-              var fractionComplete = bytesUploaded / totalBytes;
+            this.fire('youtube-upload-progress', {
+              progressEvent: data,
+              bytesPerSecond: bytesPerSecond,
+              estimatedSecondsRemaining: estimatedSecondsRemaining,
+              fractionComplete: fractionComplete
+            });
+          }.bind(this),
+          onComplete: function(data) {
+            var uploadResponse = JSON.parse(data);
+            this.fire('youtube-upload-completed', uploadResponse.id);
+            this.videoId = uploadResponse.id;
 
-              this.fire('youtube-upload-progress', {
-                progressEvent: data,
-                bytesPerSecond: bytesPerSecond,
-                estimatedSecondsRemaining: estimatedSecondsRemaining,
-                fractionComplete: fractionComplete
-              });
-            }.bind(this),
-            onComplete: function(data) {
-              var uploadResponse = JSON.parse(data);
-              this.fire('youtube-upload-completed', uploadResponse.id);
-              this.videoId = uploadResponse.id;
+            this.pollForVideoStatus();
+          }.bind(this)
+        });
 
-              this.pollForVideoStatus();
-            }.bind(this)
-          });
-
-          this.fire('youtube-upload-started', f);
-          // This won't correspond to the *exact* start of the upload, but it should be close enough.
-          this.uploadStartTime = (new Date).getTime();
-          uploader.upload();
-        }
-        // Else fire an error event? Or just silently ignore?
+        this.fire('youtube-upload-started', f);
+        // This won't correspond to the *exact* start of the upload, but it should be close enough.
+        this.uploadStartTime = (new Date).getTime();
+        uploader.upload();
       },
 
-      handleFilePick: function(e) {
+      handleFileChanged: function() {
+        this.selectedFile = this.$.file.files[0];
+
         if (this.autoUpload) {
-          this.uploadFile();
+          this.uploadFile(this.selectedFile);
         }
+      },
+
+      handleUploadClicked: function() {
+        this.uploadFile(this.selectedFile);
       },
 
       pollForVideoStatus: function() {
