Modified the inline example in the JSDocs to show off some additional attributes.

--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -12,10 +12,12 @@ Manual upload with an Video Upload button once a video file is selected:
       clientId="...">
     </google-youtube-upload>
 
-Automatic upload on video file select, without a Video Upload button:
+Automatic upload on video file select, with a custom title, and 'unlisted' privacy:
 
     <google-youtube-upload
       autoUpload="true"
+      videoTitle="My Awesome Video"
+      privacyStatus="unlisted"
       clientId="...">
     </google-youtube-upload>
 
