More JSDoc updates.

--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -200,7 +200,7 @@ Automatic upload on video file select, with a custom title, and 'unlisted' priva
       /**
        * The array of tags for the new YouTube video.
        *
-       * Defaults to ['google-youtube-upload'].
+       * Defaults to `['google-youtube-upload']`.
        *
        * @attribute tags
        * @type Array.<string>
@@ -212,7 +212,7 @@ Automatic upload on video file select, with a custom title, and 'unlisted' priva
        * The numeric YouTube
        * [cateogry id](https://developers.google.com/apis-explorer/#p/youtube/v3/youtube.videoCategories.list?part=snippet&regionCode=us).
        *
-       * Defaults to 22 ("People & Blogs").
+       * Defaults to `22` ("People & Blogs").
        *
        * @attribute categoryId
        * @type number
