Added some more explanation to the clientId JSDoc, since registering can be confusing.

--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -152,7 +152,16 @@ Automatic upload on video file select, with a custom title, and 'unlisted' priva
        */
 
       /**
-       * A Google Developers clientId reference.
+       * An OAuth 2 clientId reference, obtained from the
+       * [Google Developers Console](https://console.developers.google.com).
+       *
+       * Follow
+       * [the steps](https://developers.google.com/console/help/new/#generatingoauth2)
+       * for registering for OAuth 2, ensure that the
+       * [YouTube Data API v3](https://developers.google.com/youtube/registering_an_application)
+       * is enabled for your API project, and ensure that the JavaScript Origin
+       * is set to the domain hosting the page on which
+       * you'll be using this element.
        *
        * @attribute clientId
        * @type string
