--- a/demo.html
+++ b/demo.html
@@ -5,73 +5,136 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>google-youtube-upload Demo</title>
     <script src="../platform/platform.js"></script>
-    <link rel="import" href="google-youtube-upload.html">
+    <link rel="import" href="../polymer/polymer.html">
     <link rel="import" href="../google-youtube/google-youtube.html">
+    <link rel="import" href="google-youtube-upload.html">
     <style>
       body {
         font-family: Helvetica, sans-serif;
       }
+
+      label {
+        display: block;
+        margin-top: 1em;
+      }
+
+      input {
+        font-size: 100%;
+        width: 50%;
+      }
+
+      textarea {
+        font-size: 100%;
+        width: 50%;
+        height: 6em;
+      }
+
+      google-youtube-upload {
+        margin-top: 1em;
+      }
     </style>
   </head>
   <body unresolved>
-    <p>A <code>google-youtube-upload</code> element looks like this:</p>
+    <template is="auto-binding">
+      <p>Upload videos with a <code>&lt;google-youtube-upload&gt;</code> element!</p>
 
-    <google-youtube-upload
-      privacyStatus="unlisted"
-      clientId="1081407441937-kb9ismfsf1nnk831pasehm47sg1qo936.apps.googleusercontent.com">
-    </google-youtube-upload>
+      <div style="display: {{ (state == 'pre-upload') ? 'block' : 'none' }}">
+        <div>
+          <label for="video-title">Title:</label>
+          <input id="video-title" type="text" value="{{videoTitle}}">
+        </div>
+        <div>
+          <label for="description">Description:</label>
+          <textarea id="description" value="{{description}}"></textarea>
+        </div>
+        <div>
+          <label for="privacy-status">Privacy Status:</label>
+          <select id="privacy-status" value="{{privacyStatus}}">
+            <option>public</option>
+            <option>unlisted</option>
+            <option>private</option>
+          </select>
+        </div>
 
-    <div id="status-container" style="display: none">
-      <div>
-        <span>Upload Progress:</span>
-        <progress max="1" value="0"></progress>
-        <span id="upload-stats"></span>
+        <google-youtube-upload
+          clientId="1081407441937-kb9ismfsf1nnk831pasehm47sg1qo936.apps.googleusercontent.com"
+          videoTitle="{{videoTitle}}"
+          description="{{description}}"
+          privacyStatus="{{privacyStatus}}"
+          videoId="{{videoId}}"
+          on-youtube-upload-start="{{handleYouTubeUploadStart}}"
+          on-youtube-upload-progress="{{handleYouTubeUploadProgress}}"
+          on-youtube-upload-complete="{{handleYouTubeUploadComplete}}"
+          on-youtube-upload-fail="{{handleYouTubeUploadFail}}"
+          on-youtube-processing-poll="{{handleYouTubeProcessingPoll}}"
+          on-youtube-processing-complete="{{handleYouTubeProcessingComplete}}"
+          on-youtube-processing-fail="{{handleYouTubeProcessingFail}}">
+        </google-youtube-upload>
       </div>
-      <p id="progress-info"></p>
-    </div>
+
+      <div style="display: {{ (state == 'upload') ? 'block' : 'none' }}">
+        <div>
+          Upload Progress:
+          <progress max="1" value="{{fractionComplete}}"></progress>
+          <span>{{megabytesPerSecond}}MB/s, {{minutesRemaining}}m{{secondsRemaining}}s remaining</span>
+        </div>
+      </div>
+
+      <div style="display: {{ (state == 'upload-complete') ? 'block' : 'none' }}">
+        <p>
+          Upload complete. Please wait while video id '{{videoId}}' is
+          <a href="https://support.google.com/youtube/answer/71674?ref_topic=2888603" target="_blank">processed</a>{{processingEllipses}}
+        </p>
+      </div>
+
+      <div style="display: {{ (state == 'processing-complete') ? 'block' : 'none' }}">
+        <p>
+          Processing complete. The video is available at
+          <a href="http://youtu.be/{{videoId}}" target="_blank">http://youtu.be/{{videoId}}</a>
+          and embedded below:
+        </p>
+        <google-youtube videoId="{{videoId}}"></google-youtube>
+      </div>
+
+      <div style="display: {{ (state == 'error') ? 'block' : 'none' }}">
+        <p>{{error}}</p>
+      </div>
+    </template>
 
     <script>
-      var uploadElement = document.querySelector('google-youtube-upload');
-      var statusContainerElement = document.getElementById('status-container');
-      var progressElement = document.querySelector('progress');
-      var uploadStatsElement = document.getElementById('upload-stats');
+      var template = document.querySelector('template');
+      template.state = 'pre-upload';
+      template.processingEllipses = '...';
 
-      uploadElement.addEventListener('youtube-upload-started', function() {
-        statusContainerElement.style.display = 'block';
-      });
+      template.handleYouTubeUploadStart = function(e) {
+        template.state = 'upload';
+      };
 
-      uploadElement.addEventListener('youtube-upload-progress', function(e) {
-        var megabytesPerSecond = (e.detail.bytesPerSecond / (1024 * 1024)).toFixed(2);
-        var minutesRemaining = Math.floor(e.detail.estimatedSecondsRemaining / 60);
-        var secondsRemaining = Math.round(e.detail.estimatedSecondsRemaining % 60);
-        var uploadStats = megabytesPerSecond + 'MB/s, ' + minutesRemaining + 'm' + secondsRemaining + 's remaining';
+      template.handleYouTubeUploadProgress = function(e) {
+        template.megabytesPerSecond = (e.detail.bytesPerSecond / (1024 * 1024)).toFixed(2);
+        template.minutesRemaining = Math.floor(e.detail.estimatedSecondsRemaining / 60);
+        template.secondsRemaining = Math.round(e.detail.estimatedSecondsRemaining % 60);
+        template.fractionComplete = e.detail.fractionComplete;
+      };
 
-        progressElement.setAttribute('value', e.detail.fractionComplete);
-        uploadStatsElement.textContent = uploadStats;
-      });
+      template.handleYouTubeUploadComplete = function(e) {
+        template.state = 'upload-complete';
+      };
 
-      uploadElement.addEventListener('youtube-upload-failed', function(e) {
-        statusContainerElement.style.display = 'block';
-        statusContainerElement.textContent = e.detail;
-      });
+      template.handleYouTubeUploadFail = function(e) {
+        template.error = e.detail;
+        template.state = 'error';
+      };
 
-      uploadElement.addEventListener('youtube-upload-completed', function(e) {
-        statusContainerElement.textContent = 'Upload complete. Video id "' + e.detail + '" is being processed...';
-      });
+      template.handleYouTubeProcessingPoll = function(e) {
+        template.processingEllipses += '.';
+      };
 
-      uploadElement.addEventListener('youtube-processing-poll', function(e) {
-        statusContainerElement.textContent += '.';
-      });
+      template.handleYouTubeProcessingComplete = function(e) {
+        template.state = 'processing-complete';
+      };
 
-      uploadElement.addEventListener('youtube-processing-completed', function(e) {
-        statusContainerElement.textContent = 'Processing complete. The video is available at http://youtu.be/' + e.detail + ' and embedded below.';
-
-        var playerElement = document.createElement('google-youtube');
-        playerElement.setAttribute('videoId', e.detail);
-        statusContainerElement.appendChild(playerElement);
-      });
-
-      uploadElement.addEventListener('youtube-processing-failed', function(e) {
+      template.handleYouTubeProcessingFail = function(e) {
         var error;
         switch(e.detail.uploadStatus) {
           case 'failed':
@@ -87,8 +150,9 @@
           break;
         }
 
-        statusContainerElement.textContent = 'YouTube processing failed (' + error + ').';
-      });
+        template.error = 'YouTube processing failed (' + error + ').';
+        template.state = 'error';
+      };
     </script>
   </body>
 </html>
