Changed the wording in the demo template.

--- a/demo.html
+++ b/demo.html
@@ -83,7 +83,7 @@
       <div style="display: {{ (state == 'upload-complete') ? 'block' : 'none' }}">
         <p>
           Upload complete. Please wait while video id '{{videoId}}' is
-          <a href="https://support.google.com/youtube/answer/71674?ref_topic=2888603" target="_blank">processed</a>{{processingEllipses}}
+          <a href="https://support.google.com/youtube/answer/71674?ref_topic=2888603" target="_blank">processing</a>{{processingEllipses}}
         </p>
       </div>
 
