Updates for Polymer 0.5.1.

--- a/demo.html
+++ b/demo.html
@@ -3,9 +3,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <title>google-youtube-upload Demo</title>
-    <script src="../platform/platform.js"></script>
-    <link rel="import" href="../polymer/polymer.html">
+    <title>&lt;google-youtube-upload&gt; Demo</title>
+    <script src="../webcomponentsjs/webcomponents.min.js"></script>
     <link rel="import" href="../google-youtube/google-youtube.html">
     <link rel="import" href="google-youtube-upload.html">
     <style>
