--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,8 @@
   <head>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>&lt;google-youtube-upload&gt; Demo</title>
-    <script src="../webcomponentsjs/webcomponents.min.js"></script>
+    <script src="../webcomponentsjs/webcomponents.js"></script>
+    <link rel="import" href="../google-signin/google-signin.html">
     <link rel="import" href="../google-youtube/google-youtube.html">
     <link rel="import" href="google-youtube-upload.html">
     <style>
@@ -34,6 +35,13 @@
     </style>
   </head>
   <body unresolved>
+    <p>
+      <google-signin
+        clientId="1054047045356-j8pgqgls9vdef3rl09hapoicumbte0bo.apps.googleusercontent.com"
+        scopes="https://www.googleapis.com/auth/youtube.upload https://www.googleapis.com/auth/youtube.readonly">
+      </google-signin>
+    </p>
+
     <template id="wrapper" is="auto-binding">
       <p>
         Upload videos with a
@@ -65,7 +73,6 @@
            it continues firing state-related events. -->
       <google-youtube-upload
         style="display: {{ (state == 'pre-upload') ? 'block' : 'none' }}"
-        clientId="1054047045356-j8pgqgls9vdef3rl09hapoicumbte0bo.apps.googleusercontent.com"
         videoTitle="{{videoTitle}}"
         description="{{description}}"
         privacyStatus="{{privacyStatus}}"
