Use https where possible

--- a/demo.html
+++ b/demo.html
@@ -97,7 +97,7 @@
       <template if="{{ state == 'processing-complete' }}">
         <p>
           Processing complete. The video is available at
-          <a href="http://youtu.be/{{videoId}}" target="_blank">http://youtu.be/{{videoId}}</a>
+          <a href="https://youtu.be/{{videoId}}" target="_blank">https://youtu.be/{{videoId}}</a>
           and embedded below:
         </p>
         <google-youtube videoId="{{videoId}}"></google-youtube>
