--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -128,7 +128,7 @@ Automatic upload on video file select, with a custom title, and 'unlisted' priva
          * Fired when server-side processing is successful and the video is
          * available for playback on YouTube.
          *
-         * The video can be played at `http://youtu.be/VIDEO_ID` and can be
+         * The video can be played at `https://youtu.be/VIDEO_ID` and can be
          * embedded using the
          * [`google-youtube`](https://github.com/GoogleWebComponents/google-youtube) element.
          *
