--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ subject to an additional IP rights grant found at https://polymer.github.io/PATE
 <html>
   <head>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <script src="../webcomponentsjs/webcomponents.min.js"></script>
-    <link rel="import" href="../core-component-page/core-component-page.html">
+    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
+    <link rel="import" href="../iron-doc-viewer/iron-doc-viewer.html">
   </head>
-  <body unresolved>
-    <core-component-page></core-component-page>
+  <body>
+    <iron-doc-viewer demo-path="demo.html"></iron-doc-viewer>
   </body>
 </html>
